fix: button tap styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -30,13 +30,19 @@ hr {
   margin: 1rem 0;
 }
 
+button:focus {
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
 button:hover {
   outline: 1px solid #4d5b9e;
 }
 
 button:active {
-  box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25); /* Updated line */
+  box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25);
   outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .title-choice {
